--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    	"dev": "vite --host --port 1337",
+		"build": "vite build",
+		"preview": "vite preview"   
   },
   "eslintConfig": {
     "extends": [
@@ -44,8 +47,11 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
+    "vite": "^3.0.0"
   }
 }
+
